[SPv2] Paint frame scrollbars (non-RLS)

1. Disable compositing in PaintLayerCompositor for SPv2, so that we
   won't create GraphicsLayers for frame scrollbars and we will paint
   frame scrollbars in the non-composited path in FramePainter.
2. Issue DrawingRecorder for scrollbar backgrounds.

Bug: 757938
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: If5885cfb9a7e3b5dacbac0d26b0b59dd89f42a79